--- a/.github/workflows/jsdelivr.yml
+++ b/.github/workflows/jsdelivr.yml
@@ -15,16 +15,16 @@ jobs:
         uses: distributhor/workflow-webhook@v2
         env:
           webhook_url: "https://purge.jsdelivr.net/gh/marcsigmund/js-scripts/remove-branding-framer.js"
-          webhook_secret: ""
+          webhook_secret: "-"
 
       - name: Purge plausible-ignore
         uses: distributhor/workflow-webhook@v2
         env:
           webhook_url: "https://purge.jsdelivr.net/gh/marcsigmund/js-scripts/plausible-ignore.js"
-          webhook_secret: ""
+          webhook_secret: "-"
 
       - name: Purge keep-url-params
         uses: distributhor/workflow-webhook@v2
         env:
           webhook_url: "https://purge.jsdelivr.net/gh/marcsigmund/js-scripts/keep-url-params.js"
-          webhook_secret: ""
+          webhook_secret: "-"
